Fixed Name overflow in mobile

--- a/styles.css
+++ b/styles.css
@@ -25,9 +25,9 @@ body {
 
 .main-view-container {
   width: 100%;
-  max-width: 450px;     /* ← fixed visual width */
+  max-width: 450px;
   background: #fff;
-  margin: 0 auto;       /* ← center horizontally */
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -47,7 +47,13 @@ body {
     height: 109px;
 }
 
-h1 {
+.title {
+    padding-left: 30px;
+    padding-right: 30px;
+    text-align: center;
+}
+
+.title h1 {
     margin-top: 1.65rem;
     font-weight: 400;
     font-size: 24px;
@@ -66,8 +72,9 @@ hr {
 .description {
     text-align: center;
     padding: 0 40px 0 40px;
-    font-size: 9px;
+    font-size: 8px;
     color: #0B1F3B;
+    line-height: 15px;
 }
 
 .pill {
@@ -81,6 +88,7 @@ hr {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-bottom: 0.75rem;
 }
 
 .pill a {
@@ -102,6 +110,7 @@ hr {
 }
 
 .group {
+    margin-top: 0.75rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
